crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__func_stmt-10.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: duplicate argument `a`
[34m>[0m code:1
[34m|[0m 
[34m|[0m fn f(a, **[31;4ma[0m): pass
[34m|[0m 


