crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__func_stmt-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: non-default argument follows default argument
[34m>[0m code:1
[34m|[0m 
[34m|[0m fn f(a, b=c, [31;4md[0m,): pass
[34m|[0m 


