crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__func_stmt-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: keyword rest argument must be named
[34m>[0m code:1
[34m|[0m 
[34m|[0m fn f([31;4m**[0m,): pass
[34m|[0m 


