crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__if_stmt-9.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: invalid indentation
[34m>[0m code:3
[34m|[0m 
[34m|[0m   [31;4melse[0m: pass
[34m|[0m 


